--- a/partials/signIn.html
+++ b/partials/signIn.html
@@ -19,6 +19,38 @@
 	</tr>
 	<tr>
 		<td>
+			<h4>Email 1</h4>
+		</td>
+		<td>
+			<input type="text" name="email1" ng-model="user.email">
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<h4>Email 2</h4>
+		</td>
+		<td>
+			<input type="text" name="email2" ng-model="user.email2">
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<h4>Mot de passe</h4>
+		</td>
+		<td>
+			<input type="text" name="code" ng-model="user.password">
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<h4>Prenom</h4>
+		</td>
+		<td>
+			<input type="text" name="prenom" ng-model="user.first_name">
+		</td>
+	</tr>
+	<tr>
+		<td>
 			<h4>Nom</h4>
 		</td>
 		<td>
@@ -27,34 +59,74 @@
 	</tr>
 	<tr>
 		<td>
-			<h4>Prenom</h4>
+			<h4>Avatar</h4>
 		</td>
 		<td>
-			<input type="text" name="prenom" ng-model="user.last_name">
+			<input type="text" name="avatar">
 		</td>
-	</tr>
-	<tr>
-		<td>
-			<h4>Anniversaire</h4>
-		</td>
-		<td>
-			<input type="text" name="anniversaire">
-		</td>	
 	</tr>
 	<tr>
 		<td>
 			<h4>Poste</h4>
 		</td>
 		<td>
-			<input type="text" name="poste">
+			<input type="text" name="poste" ng-model="user.job">
 		</td>
 	</tr>
 	<tr>
 		<td>
-			<h4>site web</h4>
+			<h4>Entreprise</h4>
 		</td>
 		<td>
-			<input type="text" name="siteWeb">
+			<input type="text" name="entreprise" ng-model="user.company">
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<h4>Telephone portable</h4>
+		</td>
+		<td>
+			<input type="text" name="portable" ng-model="user.phone1">
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<h4>Telephone fixe</h4>
+		</td>
+		<td>
+			<input type="text" name="fixe" ng-model="user.phone2">
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<h4>Charlie zone</h4>
+		</td>
+		<td>
+			<input type="text" name="charlie_zone" ng-model="user.charlie_zone">
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<h4>Localisation</h4>
+		</td>
+		<td>
+			<input type="text" name="localisation" ng-model="user.localisation">
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<h4>Site web</h4>
+		</td>
+		<td>
+			<input type="text" name="siteWeb" ng-model="user.website">
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<h4>Folders</h4>
+		</td>
+		<td>
+			<input type="text" name="folders" ng-model="user.folders">
 		</td>
 	</tr>
 	<tr>
