--- a/partials/signIn.html
+++ b/partials/signIn.html
@@ -22,9 +22,17 @@
 <div class="container">
     <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-4 well well-sm">
-            <legend><a href="http://www.jquery2dotnet.com"><i class="glyphicon glyphicon-globe"></i></a> Sign up!</legend>
+            <legend><a href="http://www.jquery2dotnet.com"><i class="glyphicon glyphicon-pencil"></i></a> S'Inscrire</legend>
             <form action="#" method="post" class="form" role="form">
-            
+             <div class="form-group">
+				<div class=" input-prepend input-append input-group">
+					<span class="input-group-addon"><span class="glyphicon glyphicon-camera"></span></span>
+					<input type="text" class="form-control" id="" name="avatar" placeholder="Importer votre avatars">
+				</div>
+				<div>
+					<button class="btn btn-sg btn-primary btn-block" type="button">Upload</button>
+				</div>
+			</div>
             <div class="form-group">
              	<div class="input-group">
                     <span class="input-group-addon"><span class="glyphicon glyphicon-user"></span></span>
@@ -37,6 +45,36 @@
                     <input type="text" class="form-control" name="lastname" placeholder="lastname" required/>
                 </div>
            </div>
+          
+			<div class="form-group">
+                <div class="input-group">
+                   <span class="input-group-addon"><span class="glyphicon glyphicon-phone"></span>
+                   </span>
+                   <input type="phone" class="form-control" name="phone" placeholder="Tél" required/>
+                </div>
+            </div>
+              <div class="form-group">
+                <div class="input-group">
+                   <span class="input-group-addon"><span class="glyphicon glyphicon-phone-alt"></span>
+                   </span>
+                   <input type="phone2" class="form-control" name="phone2" placeholder="Tél 2" required/>
+                </div>
+            </div>
+			<div class="form-group">
+                <div class="input-group">
+                   <span class="input-group-addon"><span class="glyphicon glyphicon-education"></span>
+                   </span>
+                   <input type="school" class="form-control" name="school" placeholder="Poste / Etude / Classe" required/>
+                </div>
+            </div>
+			 <div class="form-group">
+                <div class="input-group">
+                   <span class="input-group-addon"><span class="glyphicon glyphicon-briefcase"></span>
+                   </span>
+                   <input type="society" class="form-control" name="society" placeholder="Société / Université / Lycée" required/>
+                </div>
+            </div>
+          
             <div class="form-group">
                 <div class="input-group">
                    <span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span>
@@ -51,22 +89,31 @@
                    <input type="email" class="form-control" name="reenteremail" placeholder="Re-enter Email Address" required/>
                 </div>
             </div>
-            
-           <div class="form-group">
-                 <div class="input-group">
-                    <span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
-                    <input type="password" class="form-control" name="password" placeholder="Password" required/>
-                 </div>
-            </div>
-            <div class="form-group">
-                 <div class="input-group">
-                    <span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
-                    <input type="password" class="form-control" name="confirmPassword" placeholder="Confirm Password" required/>
-                 </div>
+            <div>
+            	<i ></i>
             </div>
 
-            <label for="">
-                Birth Date</label>
+
+			 <div class="form-group"> 
+                <div class="input-group">
+                   <span class="input-group-addon"><span class="glyphicon glyphicon-home"></span>
+                   </span>
+                   <input type="text" class="form-control" name="Localisation" placeholder="Localisation"/>
+                </div>
+            </div>
+             <div class="form-group">
+                 <div class="input-group">
+                    <span class="input-group-addon"><span class="glyphicon glyphicon-globe"></span></span>
+                    <input type="text" class="form-control" name="web" placeholder="Site internet" />
+                 </div>
+            </div>
+			<div class="form-group">
+                 
+                    <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
+                    <label for="">Date de Naissance</label>
+                 
+            </div>
+           
             <div class="row">
                 <div class="col-xs-4 col-md-4">
                     <select name="month" class="form-control input-lg">
@@ -203,16 +250,7 @@
                     </select>
                 </div>
             </div>
-            <label class="radio-inline">
-                <input type="radio" name="sex" id="inlineCheckbox1" value="male" />
-                Male
-            </label>
-            <label class="radio-inline">
-                <input type="radio" name="sex" id="inlineCheckbox2" value="female" />
-                Female
-            </label>
-            <br />
-            <br />
+           
             <button class="btn btn-lg btn-primary btn-block" type="submit">
                 Sign up</button>
             </form>
