--- a/partials/home.html
+++ b/partials/home.html
@@ -10,5 +10,6 @@
 	<a href="#signin">Signin</a>
 	<a href="#test">test</a>
 	<a href="#shop">shop</a>
+	<a href="#personnaliserCarte">ps</a>
 	
 </section>
