--- a/partials/shop.html
+++ b/partials/shop.html
@@ -1,11 +1,11 @@
  
 <section class ="fondSite" > 
-    <h3 class="personaliserCarte">Faites personnaliser votre carte &nbsp &nbsp<span class = "glyphicon glyphicon-arrow-right" aria-hidden="true"></span> </h3> 
- 
+    <a href="#personnaliserCarte"><h3 class="personaliserCarte" data-toggle="dropdown" role="button">Faites personnaliser votre carte &nbsp &nbsp<span class = "glyphicon glyphicon-arrow-right" aria-hidden="true"></span> </h3> </a>
+    
         <div class="bandSelect" id="navbar">
             <ul class="nav navbar-nav navbar-left">
                 <li>
-                    <a class="selectCarte" data-toggle="dropdown" role="button" aria-expanded="false">Toutes metiers <span class="caret"></span></a>
+                    <a class="selectMetier" data-toggle="dropdown" role="button" aria-expanded="false">Toutes metiers <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
                         <li><a>Design</a></li>
                         <li><a>Professionnelles</a></li>
@@ -21,6 +21,7 @@
                         <li><a >Rouge</a></li>
                     </ul>
                 </li>
+                <li><a class="ajouterCarte" data-toggle="dropdown" role="button"> Ajouter ces &nbsp {{count}} &nbsp cartes </a></li>
             </ul>
         </div>
     
@@ -31,7 +32,7 @@
                     <a class="thumbnail" id="carousel-selector-{{template}}" 
                     ng-class="{{template}}" > 
                         template : {{template}} 
-                        <div ng-switch = "selectedIcon" ng-click= "selectedIcon = !selectedIcon">
+                        <div ng-switch = "selectedIcon" ng-click= "selectedIcon = !selectedIcon; comptCarte()">
                             <img  ng-switch-when=true class="plusOkIcon" src="img/plus.jpg" alt="plus">   
                             <img ng-switch-when=false class="plusOkIcon" src="img/ok.jpg" alt="ok"> 
                         </div>
