--- a/css/shop.css
+++ b/css/shop.css
@@ -7,11 +7,10 @@ background-color: #50E3C2;
     vertical-align:center;
 }
 
-
 .carousel-inner>.item>img, .carousel-inner>.item>a>img {
     width: 100%;
-
 }
+
 
 
 .shop {
@@ -19,27 +18,25 @@ background-color: #50E3C2;
 	text-align: center;
 	margin-left: auto;
   	margin-right: auto;
-  	margin-top: 40px;
-  	width: 800px; 
-  	height: 500px;
+  	margin-top: 30px;
+  	width: 1000px; 
+  	height: 400px;
   	padding-top: 10px;
+  	overflow-x:hidden;
   	border-radius: 10px;
-  	overflow-x: scroll
 }
 
 .personaliserCarte{
 	background-color: white;
-	width: 800px;
-	height: 50px;
+	width: 1000px;
+	height: 40px;
 	text-align: center;
 	border:1px ;
-	font-family:Arial;
 	padding:10px 20px;
 	font-size:18px; 
-	font-weight: bold;
 	color: #50E3C2;
-	margin-top: 10px;
-	margin-bottom: 20px;
+	margin-top: 2px;
+	margin-bottom: 10px;
 	padding-top: 10px;
 	border-radius: 10px;
 	box-shadow: 0 1px 1px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
@@ -48,37 +45,39 @@ background-color: #50E3C2;
 .bandSelect{
 	margin-left: auto;
   	margin-right: auto;
-  	width: 800px; 
+  	width: 1000px; 
   	height: 15px;
 }
 
 .selectMetier{
+	border: 0;
 	text-align: center;
-	font-size: 18px;
-	font-weight: bold;
-	width: 170px;
+	font-size: 16px;
+	width: 200px;
 	height: 40px;
+	background-color: #50E3C2;
 	color: white;
-	border-radius: 10px;
+	border-radius: 8px;
 	box-shadow: 0 1px 1px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
 .ajouterCarte{
 	text-align: center;
-	font-size: 18px;
-	font-weight: bold;
-	width: 220px;
+	font-size: 16px;
+	width: 250px;
 	height: 40px;
 	color: white;
-	border-radius: 10px;
+	border-radius: 8px;
 	border: 2px;
 	box-shadow: 0 1px 1px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-	margin-left: 410px;
+	position:relative;
+	left:220%;
 }
 
 .thumbnail {
     width: 150px;
     height: 80px;
+    box-shadow: 10px 10px 10px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
     z-index: 1;
 }
 
@@ -99,19 +98,21 @@ background-color: #50E3C2;
   	margin-right: auto;
 }
 
-table{
-	margin-left: 40px;
-	margin-right: 40px;
-	margin-top: 30px;
+.modal-content{
+	background-color: #50E3C2;
 }
 
-.modal-header{
-	background-color: #50E3C2;
-	color: white;
-	width: 600px;
-	height: 700px;
-	border-radius: 10px;
+.close{
+	margin-top: 10px;
+	margin-right: 20px;
+}
 
+table{
+	background-color: #50E3C2;
+	margin-left: 40px;
+	margin-right: 40px;
+	margin-top: 40px;
+	margin-bottom: 30px;
 }
 
 .p1{
@@ -119,37 +120,42 @@ table{
 }
 
 .bouttonContact{
+	width: 250px;
+	height: 40px;
 	background-color:white;
-	border-radius: 10px;
+	border-radius: 7px;
 	border:1px ;
-	box-shadow: 0 1px 1px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+	box-shadow: 0 10px 10px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 	color:#50E3C2;
-	font-family:Arial;
-	font-size:18px;
-	padding:10px 20px;
+	font-size:16px;
 	float: right;
 }
 
 .modal-header1{
 	background-color: #50E3C2;
 	color: white;
-	width: 600px;
-	height: 400px;
-	border-radius: 10px;
 
+}
+
+.modal-header2{
+	background-color: #50E3C2;
+	border-radius: 10px;
+}
+
+.modal-content{
+	margin-top: 35px;
 }
 
 .textContact{
-	width: 243px;
-	height: 35px;
+	width: 258px;
+	height: 30px;
 	color: #50E3C2;
 	border-radius: 5px;
-
 }
 
 .messageContact{
-	width: 490px;
-	height: 100px;
+	width: 520px;
+	height: 65px;
 	color: #50E3C2;
 	vertical-align: top;
     text-align: left;
@@ -158,4 +164,30 @@ table{
 
 .card{
 	background-size: 100%;
+}
+
+.modalOpen {
+	border-radius: 10px;
+	background-color: #50E3C2;
+}
+
+.openFond{
+	width: 540px;
+	height: 324px;
+	box-shadow: 0 1px 1px 0 rgba(0,0,0,0.3), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+
+.modalAjoute{
+	margin-top: 30px;
+	margin-bottom: 30px;
+	padding-top: 13px;
+	text-align: center;
+	font-size: 20px;
+	width: 540px;
+	height: 50px;
+	background-color: white;
+	color: #50E3C2;
+	border-radius: 8px;
+	border: 2px;
+	box-shadow: 0 1px 1px 0 rgba(0,0,0,0.3), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
