--- a/partials/signIn.html
+++ b/partials/signIn.html
@@ -131,42 +131,43 @@
             </div>
             <div class="form-group">
                 <div class="input-group">
-                   <span class="input-group-addon"><span class="glyphicon glyphicon-phone-alt"></span>
+                   <span class="input-group-addon"><span class="glyphicon glyphicon-earphone"></span>
                    </span>
                    <input type="phone2" class="form-control" name="phone2" placeholder="Tél 2" />
                 </div>
             </div>
             <div class="form-group">
                 <div class="input-group">
-                   <span class="input-group-addon"><span class="glyphicon glyphicon-education"></span>
+                   <span class="input-group-addon"><span class="glyphicon glyphicon-briefcase"></span>
                    </span>
                    <input type="school" class="form-control" name="school" placeholder="Poste / Etude / Classe" />
                 </div>
             </div>
             <div class="form-group">
                 <div class="input-group">
-                   <span class="input-group-addon"><span class="glyphicon glyphicon-briefcase"></span>
+                   <span class="input-group-addon"><span class="fa fa-industry"></span>
                    </span>
                    <input type="society" class="form-control" name="society" placeholder="Société / Université / Lycée" />
                 </div>
             </div>
              <div class="form-group">
                 <div class="input-group">
-                   <span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span>
+                   <span class="input-group-addon"><span class="fa fa-at"></span>
                    </span>
                    <input type="text" class="form-control"  name="email" placeholder="Mail" />
                 </div>
             </div>
              <div class="form-group">
                 <div class="input-group">
-                   <span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span>
+                   <span class="input-group-addon"><span class="fa fa-at"></span>
                    </span>
                    <input type="email" class="form-control" name="mail2"  placeholder="Mail 2" />
                 </div>
             </div>
              <div class="form-group"> 
                 <div class="input-group">
-                   <span class="input-group-addon"><span class="glyphicon glyphicon-home"></span>
+                   <span class="input-group-addon"><span class="fa fa-home"></span>
+                  
                    </span>
                    <input type="text" class="form-control" name="Localisation" placeholder="Localisation"/>
                 </div>
@@ -179,8 +180,9 @@
             </div>
             <div class="form-group">
 				<div class="input-group">
-                    <span class="input-group-addon"><i class="material-icons" style="font-size:18px">cake</i></span>
+                    <span class="input-group-addon"><i class="fa fa-birthday-cake"></i></span>
                     <a class="list-group-item">Date de Naissance</a>
+
             	</div>
             </div>
             <div class="row">
