--- a/css/shop.css
+++ b/css/shop.css
@@ -74,12 +74,36 @@ background-color: #50E3C2;
 	left:220%;
 }
 
+
 .thumbnail {
     width: 150px;
     height: 80px;
     box-shadow: 10px 10px 10px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
     z-index: 1;
 }
+
+
+.imgAvatar{
+	position: absolute;
+	overflow:hidden;
+    border-radius:100%;
+    width:40px;
+    height:40px;
+    z-index: 2;
+    top:15%;
+    left: 10%;
+}
+
+.imgAvatarM{
+	position: absolute;
+	overflow:hidden;
+    width:150px;
+    height:150px;
+    z-index: 2;
+    border-radius: 100%;
+    left: 10%;
+    top:10%;
+    }
 
 .plusOkIcon{
 	width: 40px;
@@ -181,13 +205,67 @@ table{
 	margin-top: 30px;
 	margin-bottom: 30px;
 	padding-top: 13px;
-	text-align: center;
-	font-size: 20px;
+}
+
+.f{
 	width: 540px;
 	height: 50px;
+	text-align: center;
+	font-size: 20px;
 	background-color: white;
 	color: #50E3C2;
+	box-shadow: 0 1px 1px 0 rgba(0,0,0,0.3), 0 6px 20px 0 rgba(0,0,0,0.19);
 	border-radius: 8px;
 	border: 2px;
+}
+
+.t{
+	width: 540px;
+	height: 50px;
+	text-align: center;
+	font-size: 20px;
+	background-color: #50E3C2;
+	color: white;
 	box-shadow: 0 1px 1px 0 rgba(0,0,0,0.3), 0 6px 20px 0 rgba(0,0,0,0.19);
+	border-radius: 8px;
+	border: 2px;
+}
+
+.achatTitle{
+	margin-top: 30px;
+	margin-bottom: 30px;
+	font-size: 22px;
+	color: white;
+}
+
+.achatCarte{
+	padding-top: 10px;
+	font-size: 16px;
+	width: 540px;
+	height: 40px;
+	color: #50E3C2;
+	background-color: white;
+	border-radius: 8px;
+}
+
+.achatBouton {
+	margin-top: 40px;
+	margin-bottom: 40px;
+	width: 200px;
+	height: 70px;
+	font-size: 22px;
+	background-color: white;
+	box-shadow: 0 1px 1px 0 rgba(0,0,0,0.3), 0 6px 20px 0 rgba(0,0,0,0.19);
+	border-radius: 8px;
+	border: 2px;
+	color: #50E3C2;
+
+}
+
+.achatPied{
+	font-size: 14px;
+}
+
+.resteCarte{
+	color: white;
 }
