--- a/partials/signIn.html
+++ b/partials/signIn.html
@@ -132,7 +132,7 @@
                 <div class="input-group">
                    <span class="input-group-addon"><span class="glyphicon glyphicon-phone"></span>
                    </span>
-                   <input type="phone" class="form-control" ng-model="user.phone" name="phone" placeholder="Tél" />
+                   <input type="phone" class="form-control" ng-model="user.phone1" name="phone" placeholder="Tél" />
                 </div>
             </div>
             <div class="form-group">
@@ -160,14 +160,14 @@
                 <div class="input-group">
                    <span class="input-group-addon"><span class="fa fa-at"></span>
                    </span>
-                   <input type="text" class="form-control" ng-model="{{user.email}}" name="email" placeholder="Mail" />
+                   <input type="text" class="form-control"  name="email" ng-model="user.email" placeholder="Mail" />
                 </div>
             </div>
              <div class="form-group">
                 <div class="input-group">
                    <span class="input-group-addon"><span class="fa fa-at"></span>
                    </span>
-                   <input type="email" class="form-control" name="mail2" ng-model="{{user.email2}}" placeholder="Mail 2" />
+                   <input type="email" class="form-control" name="mail2"  ng-model="user.email2" placeholder="Mail 2" />
                 </div>
             </div>
              <div class="form-group"> 
