--- a/css/shop.css
+++ b/css/shop.css
@@ -196,8 +196,8 @@ table{
 }
 
 .openFond{
-	width: 540px;
-	height: 324px;
+	width: 480px;
+	height: 288px;
 	box-shadow: 0 1px 1px 0 rgba(0,0,0,0.3), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
@@ -208,7 +208,7 @@ table{
 }
 
 .f{
-	width: 540px;
+	width: 480px;
 	height: 50px;
 	text-align: center;
 	font-size: 20px;
@@ -220,7 +220,7 @@ table{
 }
 
 .t{
-	width: 540px;
+	width: 480px;
 	height: 50px;
 	text-align: center;
 	font-size: 20px;
@@ -241,7 +241,7 @@ table{
 .achatCarte{
 	padding-top: 10px;
 	font-size: 16px;
-	width: 540px;
+	width: 480px;
 	height: 40px;
 	color: #50E3C2;
 	background-color: white;
@@ -249,20 +249,21 @@ table{
 }
 
 .achatBouton {
-	margin-top: 40px;
-	margin-bottom: 40px;
-	width: 200px;
-	height: 70px;
-	font-size: 22px;
+	margin-top: 30px;
+	width: 480px;
+	height: 50px;
+	font-size: 18px;
 	background-color: white;
-	box-shadow: 0 1px 1px 0 rgba(0,0,0,0.3), 0 6px 20px 0 rgba(0,0,0,0.19);
+	box-shadow: 0 2px 2px 0 rgba(0,0,0,0.4), 0 6px 20px 0 rgba(0,0,0,0.19);
 	border-radius: 8px;
 	border: 2px;
 	color: #50E3C2;
+	font-style: bold;
 
 }
 
 .achatPied{
+	margin-top: 30px;
 	font-size: 14px;
 }
 
