--- a/partials/shop.html
+++ b/partials/shop.html
@@ -152,10 +152,14 @@
                         <p class="achatTitle">Achat de cartes premium</p>
                         <p class="achatCarte">1 carte premium au choix &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 1,99 €</p>
                         <p class="achatCarte">3 carte premium au choix &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 3,99 €</p>
-                        <p class="achatCarte">5 carte premium au choix &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 5,99 €</p>
-                        <p ><button class="achatBouton">ACHETER</button></p>
+                        <p class="achatCarte">5 carte premium au choix &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 5,99 €
+                        </p>
+                        <p>
+                        <button class="achatBouton"> Vous avez &nbsp{{100-fondAAjoute.length}} &nbspde crédit,achtez avec vos crédits</button>
+                        <button class="achatBouton">Achetez avec Payepal</button>
+                        </p> 
                         <p class="achatPied">Ou ajoutez &nbsp <span class="resteCarte">{{100-fondAAjoute.length}}</span>&nbsp contacts pour bénéficier d'un fond de carte gratuit</p>
-                    </center>
+                     </center>
             </div>
         </div>
     </div>
