--- a/partials/shop.html
+++ b/partials/shop.html
@@ -155,8 +155,8 @@
                         <p class="achatCarte">5 carte premium au choix &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 5,99 €
                         </p>
                         <p>
-                        <button class="achatBouton"> Vous avez &nbsp{{100-fondAAjoute.length}} &nbspde crédit,achtez avec vos crédits</button>
-                        <button class="achatBouton">Achetez avec Payepal</button>
+                        <button class="achatBouton"> Vous avez &nbsp {{getCredits}} &nbspde crédit, achtez avec vos crédits</button>
+                        <button class="achatBouton">Achetez avec Paypal</button>
                         </p> 
                         <p class="achatPied">Ou ajoutez &nbsp <span class="resteCarte">{{100-fondAAjoute.length}}</span>&nbsp contacts pour bénéficier d'un fond de carte gratuit</p>
                      </center>
