--- a/partials/signIn.html
+++ b/partials/signIn.html
@@ -1,9 +1,51 @@
 <div class="container">
 	<div class="row" id="rowSign">
 	<div class="row col-lg-5" id="cardPerso">
-		<p>
-		qsffdsqfgsgdsgqhgdhdhdhdhdhdhd
-		</p>
+		<div>
+			<div id="cardProfil">
+				<span>
+					{{user.avatar}}
+				</span>
+				<span>
+					{{user.first_name}}
+				</span>
+				<span>
+					{{user.last_name}}
+				</span>
+				<span>
+					{{user.email}}
+				</span>
+				<span>
+					{{user.email2}}
+				</span>
+				<span>
+					{{user.phone1}}
+				</span>
+				<span>
+					{{user.phone2}}
+				</span>
+				<span>
+					{{user.job}}
+				</span>
+				<span>
+					{{user.company}}
+				</span>
+				<span>
+					{{user.localisation}}
+				</span>
+				<span>
+					{{user.website}}
+				</span>
+				<span>
+					{{user.birth_date}}
+				</span>
+			</div>
+			<div>
+				<a href="#/shop"><button class="btn btn-sg btn-default btn-block" type="button">
+                Choisir son fond de carte</button> 
+                </a>
+			</div>	
+		</div>
 
 <div class="container">
 	<div class="row" id="rowSign">
@@ -15,7 +57,7 @@
 	</div>
 	<div class="row form-group col-lg-offset-2 col-lg-5 pre-scrollable" id="sign">
 		 <div class="col-xs-12 col-sm-12 col-md-12 well well-sm">
-            <legend><a href="http://www.jquery2dotnet.com"><i class="glyphicon glyphicon-pencil"></i></a> Renseigner mon profil</legend>
+            <legend id="titre"><a  href="http://www.jquery2dotnet.com"><i class="glyphicon glyphicon-pencil"></i></a > Renseigner mon profil</legend>
 			<div class="row onl_row-sm-12 onl_socialButtons">
 			          <div class="col-xs-2 col-sm-2">
 			            <a href="#" class="btn btn-lg btn-block onl_btn-facebook" data-toggle="tooltip" data-placement="top" title="Facebook">
@@ -93,19 +135,18 @@
 			          </div>
 			</div><br>
         </div>
-
-	 	<form action="update()" method="post" class="form well well-sm" role="form">
+	 	<form  id="signForm" ng-submit="update()" class="form well well-sm" role="form">
 			
 
 			<label>Importer votre avatar</label>
 			<div class="form-group">
 				<div class="input-prepend input-append input-group ">
-				<span class="input-group-addon"><span class="glyphicon glyphicon-camera"></span></span><input type="text" id="avatar" name="avatar" ng-model="user.avatar"><button class="btn btn-primary" type="button">Upload</button>
+				<span class="input-group-addon"><span class="glyphicon glyphicon-camera"></span></span><input type="text" id="avatar" name="avatar" ng-model="user.avatar"><button class="btn btn-default" type="button" ng-click="ajouter()">Upload</button>
 				</div>
 			</div>
 
 			<div class="progress">
-            	<div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
+            	<div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
                 <span class="sr-only">20% Complete (info)</span>
 				</div>
             	<span class="progress-type">Remplissage de votre profil</span>
@@ -187,8 +228,7 @@
             <div class="form-group">
 				<div class="input-group">
                     <span class="input-group-addon"><i class="fa fa-birthday-cake"></i></span>
-                    <a class="list-group-item">Date de Naissance</a>
-
+                   <input type="text" class="form-control" name="birthday" ng-model="user.birth_date" placeholder="Date de naissance" />
             	</div>
             </div>
             <div class="row">
@@ -327,7 +367,7 @@
                     </select>
                 </div>
 	        </div>
-	        <button class="btn btn-sg btn-primary btn-block" type="button" ng-click="update()">
+	        <button class="btn btn-sg btn-default btn-block" type="button" ng-click="update()">
                 Sign up</button>        
 	 	</form>
 	</div>
