--- a/css/signIn.css
+++ b/css/signIn.css
@@ -156,3 +156,11 @@ color: #50E3C2;
 #sign{
 	color: #50E3C2;
 }
+#popuSocial{
+	background-color: #50E3C2;
+	margin-left: 40px;
+	margin-right: 40px;
+	margin-top: 40px;
+	margin-bottom: 30px;
+	color:white;
+}
